# Onofrei_Cristian-Rust-2B4-2025-2026

k9_bot/: Cargo.toml  episodes.json  quotes.json  trivia.json
k9_bot/src/: main.rs  structs.rs
lab01/: Cargo.toml
lab02/src/: main.rs
lab03/src/: main.rs
lab04/src/: main.rs
lab06/src/: main.rs
lab_01/src/: main.rs
