[package]
name = "k9_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
