[package]
name = "k9_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0" #loads discord token from env file to not leak it in the code accidentally

poise = "0.6.1" #Bot Framework

rand = "0.9.2" #random generator

serde = { version = "1.0.228", features = ["derive"] } #Data serilization - basically for handling json files to read quotes and episodes
serde_json = "1.0.147"


sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] } #sql database


tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] } #async runtime - allows multiple people to use the bot at the same time
